Fixed various linting problems.